--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 # Development environment variables
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/releaf?schema=public"
+DATABASE_URL="postgresql://postgres:svuuikSXtjeEXnvDAQcwGqJmalYSHkNL@hopper.proxy.rlwy.net:27364/railway"
 JWT_SECRET="devSecretToBeChangedInProduction28374623874"
 PORT=4000
