--- a/backend/package.json
+++ b/backend/package.json
@@ -11,14 +11,31 @@
     "generate": "prisma generate"
   },
   "dependencies": {
+    "@fetchai/ai-engine-sdk": "^0.1.0",
+    "@google/generative-ai": "^0.24.0",
     "@prisma/client": "^5.9.0",
+    "@types/sharp": "^0.31.1",
+    "@types/uuid": "^10.0.0",
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.9.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.1"
+    "express-fileupload": "^1.5.1",
+    "file-type": "^20.5.0",
+    "fs-extra": "^11.3.0",
+    "jsonwebtoken": "^9.0.1",
+    "jsqr": "^1.4.0",
+    "multer": "^1.4.5-lts.2",
+    "path": "^0.12.7",
+    "sharp": "^0.34.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/express-fileupload": "^1.5.1",
+    "@types/fs-extra": "^11.0.4",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
     "prisma": "^5.9.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.3"
