--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "framer-motion": "^12.9.2",
     "input-otp": "^1.2.4",
     "jsqr": "^1.4.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
