--- a/.github/workflows/cloudflare-deploy.yml
+++ b/.github/workflows/cloudflare-deploy.yml
@@ -23,7 +23,10 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
-
+          
+      - name: Configure npm
+        run: npm config set legacy-peer-deps=true
+        
       - name: Install dependencies
         run: npm ci --legacy-peer-deps
 
