--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "prebuild": "node prebuild.js",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
